Fix overflow bug with banners

--- a/assets/css/1-tools/_normalize.scss
+++ b/assets/css/1-tools/_normalize.scss
@@ -22,7 +22,7 @@ html {
 
 body {
   margin: 0;
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 /* HTML5 display definitions
