--- a/assets/css/2-components/_banner.scss
+++ b/assets/css/2-components/_banner.scss
@@ -1,12 +1,10 @@
 .banner {
   background-color: $link-color;
   height: 150px;
-  max-width: 100%;
-  width: 100vw;
-  max-width: 100vw !important;
+  max-width: 100vw;
   width: 100vw;
   margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 49%);
   overflow: hidden;
   position: relative;
   h1 {
